--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,17 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^4.9.1
   cupertino_icons: ^1.0.2
+  dartz: ^0.10.1
+  firebase_auth: ^4.9.0
+  firebase_core: ^2.15.1
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
   flutter_screenutil: ^5.9.0
   go_router: ^10.1.2
+  google_sign_in: ^6.1.5
 
 dev_dependencies:
   flutter_lints: ^2.0.0
